set (CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/../../modules/Common/scripts;${CMAKE_CURRENT_SOURCE_DIR}/../../../Common/scripts")
include (flex)

add_subdirectory (dhcp)
add_subdirectory (ftp)
add_subdirectory (http)
add_subdirectory (irc)
add_subdirectory (p2p)
add_subdirectory (pcp)
add_subdirectory (pop)
add_subdirectory (ssdp)
add_subdirectory (smtp)
